--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../frontend/puhelinluettelo && npm run build && cp -r build ../../backend",
+    "build:ui": "rmdir /s /q build && cd frontend/puhelinluettelo && npm run build && move build ../../",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Eero Hakanen",
