--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Eero Hakanen",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.35.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
